<resources>
    <string name="app_name">Calculator development</string>
    <string name="digit_one_text">1</string>
    <string name="digit_two_text">2</string>
    <string name="digit_three_text">3</string>
    <string name="digit_four_text">4</string>
    <string name="digit_five_text">5</string>
    <string name="digit_six_text">6</string>
    <string name="digit_seven_text">7</string>
    <string name="digit_eight_text">8</string>
    <string name="digit_nine_text">9</string>
    <string name="digit_zero_text">0</string>
    <string name="comma_button_text">,</string>
    <string name="equals_button_text">=</string>
    <string name="clear_button_text">C</string>
    <string name="divide_button_text">/</string>
    <string name="multiply_button_text">x</string>
    <string name="minus_button_text">-</string>
    <string name="plus_button_text">+</string>
    <string name="return_button_text">Return</string>
    <string name="minus_plus_text">-/+</string>
    <string name="linght_theme_text_button">светлая тема приложения</string>
    <string name="dark_theme_text_button">темная тема приложения</string>
</resources>