<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star_night"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/one_fourth_margin"
        android:background="#EFEFEF"
        android:cursorVisible="false"
        android:gravity="right|bottom"
        android:padding="@dimen/half_margin"
        android:textSize="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_fourth_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_edit_text">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_seven_button"
                style="@style/digit_button_style"
                android:text="@string/digit_seven_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_eight_button"
                style="@style/digit_button_style"
                android:text="@string/digit_eight_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_nine_button"
                style="@style/digit_button_style"
                android:text="@string/digit_nine_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_four_button"
                style="@style/digit_button_style"
                android:text="@string/digit_four_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_five_button"
                style="@style/digit_button_style"
                android:text="@string/digit_five_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_six_button"
                style="@style/digit_button_style"
                android:text="@string/digit_six_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_one_button"
                style="@style/digit_button_style"
                android:text="@string/digit_one_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_two_button"
                style="@style/digit_button_style"
                android:text="@string/digit_two_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_three_button"
                style="@style/digit_button_style"
                android:text="@string/digit_three_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/digit_zero_button"
                style="@style/digit_button_style"
                android:text="@string/digit_zero_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/comma_button"
                style="@style/digit_button_style"
                android:text="@string/comma_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/result_button"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/one_fourth_margin"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/equals_button_text"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one_fourth_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/table_Layout"
        app:layout_constraintTop_toBottomOf="@+id/input_text_edit_text">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            android:layout_width="@dimen/button_wight"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginTop="@dimen/one_fourth_margin"
            android:layout_marginEnd="@dimen/one_fourth_margin"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/clear_button_text"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_button"
            style="@style/operator_button_style"
            android:text="@string/return_button_text"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divide_button"
            style="@style/operator_button_style"
            android:text="@string/divide_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply_button"
            style="@style/operator_button_style"
            android:text="@string/multiply_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            style="@style/operator_button_style"
            android:text="@string/minus_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_button"
            style="@style/operator_button_style"
            android:text="@string/plus_button_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>